<resources>
    <string name="app_name">Bill Please</string>
    <string name="title">Checking out of Kirbo</string>
    <string name="context">Please fill out the blank to checkout</string>
    <string name="amount_of_kirbo">Total Cost of Kirbo*</string>
    <string name="e_g_50">E.g. 50</string>
    <string name="totalPPl">Total number of people*</string>
    <string name="exampleForPpl">E.g 7</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="no_svs">No SVS</string>
    <string name="svs">SVS</string>
    <string name="no_gst">No GST</string>
    <string name="gst">GST</string>
    <string name="explainSvs">SVS(10%)</string>
    <string name="ExplainGST">GST(7%)</string>
    <string name="cash">Cash</string>
    <string name="payment_method">Payment Method*:</string>
    <string name="paynow">Paynow</string>
    <string name="end">End of Payment</string>
    <string name="discount">Discount(%):</string>
</resources>